added getSales with filtering , pagination function