@@ -1,6 +1,7 @@
 package com.toyota.saleservice.service.impl;
 
 import com.toyota.saleservice.dao.SaleRepository;
+import com.toyota.saleservice.domain.PaymentType;
 import com.toyota.saleservice.domain.Sale;
 import com.toyota.saleservice.dto.PaginationResponse;
 import com.toyota.saleservice.dto.SaleDto;
@@ -19,6 +20,7 @@ import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
 
 
 @Service
@@ -28,24 +30,48 @@ public class SaleServiceImpl implements SaleService {
     private final SaleRepository saleRepository;
     private final Logger logger = LogManager.getLogger(SaleService.class);
     private final MapUtil mapUtil;
-
     @Override
-    public PaginationResponse<SaleDto> getSalesFiltered(int page, int size, List<String> sortBy, String sortOrder, double totalPrice, LocalDateTime date, String paymentType, boolean deleted) {
+    public PaginationResponse<SaleDto> getSalesFiltered(int page,
+                                                        int size,
+                                                        List<String> sortBy,
+                                                        String sortOrder,
+                                                        double minTotalPrice,
+                                                        double maxTotalPrice,
+                                                        LocalDateTime startDate,
+                                                        LocalDateTime endDate,
+                                                        String paymentTypeStr,
+                                                        boolean deleted) {
 
         logger.info("Getting sales with filters");
+
         Pageable pageable = PageRequest.of(page, size, Sort.by(SortUtil.createSortOrder(sortBy, sortOrder)));
-        Page<Sale> pageResponse = saleRepository.getSalesFiltered(totalPrice, date, paymentType, deleted, pageable);
+
+        PaymentType paymentType = null;
+        if (paymentTypeStr != null && !paymentTypeStr.isEmpty()) {
+            try {
+                paymentType = PaymentType.valueOf(paymentTypeStr.toUpperCase());
+            } catch (IllegalArgumentException e) {
+                throw new IllegalArgumentException("Invalid payment type: " + paymentTypeStr);
+            }
+        }
+
+        Page<Sale> pageResponse = saleRepository.getSalesFiltered(minTotalPrice, maxTotalPrice, startDate, endDate, paymentType, deleted, pageable);
+
         logger.debug("Retrieved {} sales.", pageResponse.getContent().size());
-        List<SaleDto> saleDtos = pageResponse.stream().map(
-                mapUtil::convertSaleToSaleDto).toList();
+
+        List<SaleDto> saleDtos = pageResponse.getContent().stream()
+                .map(mapUtil::convertSaleToSaleDto)
+                .collect(Collectors.toList());
+
         logger.info("Retrieved and converted {} sales to dto.", saleDtos.size());
 
         return new PaginationResponse<>(saleDtos, pageResponse);
     }
 
+
     @Override
     public SaleDto addSale(SaleDto saleDto) {
-        logger.info("Adding sale with id "+saleDto.getId());
+        logger.info("Adding sale with id {}", saleDto.getId());
 
         if(saleRepository.existsByIdAndDeletedIsFalse(saleDto.getId())){
             logger.warn("Sale add failed due to existing sale with id: {}",saleDto.getId());
